add privacy policy page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello Mohammad
+<h1 style="color: #5e9ca0;">Your Privacy Matters!</h1>
+<p>LinkUp&rsquo;s mission is to connect the world&rsquo;s users to allow them to be share some useful information with others. Central to this mission is our commitment to be transparent about the data we collect about you, how it is used and with whom it is shared.</p>
+<h2 style="color: #2e6c80;">LinkUp Privacy Policy</h2>
+<h3>Introduction</h3>
+<p>This Privacy Policy explains what information LinkUp Inc. collect about you and why, what we do with that information, how we share it, and how we handle the content you place in our services.</p>
+<h3 class="western">Scope of Privacy Policy</h3>
+<p>This Privacy Policy applies to the information that we obtain through your use of&nbsp;&ldquo;LinkUp Services&rdquo; via a &ldquo;Device&rdquo;.</p>
+<p>A &ldquo;<strong>Device</strong>&rdquo; is a mobile phone used to access the application.</p>
+<h3 class="section-title">1. Data We Collect</h3>
+<p>We just use your mobile device id to authorize access to our Services.</p>
+<p>&nbsp;</p>
+<h3 class="section-title">2. How We Use Your Data</h3>
+<p>We use your data to provide, support, personalize and develop our Services.</p>
+<p>In addition it is used to give a user updates based on the notification setting.</p>
+<h2 style="color: #2e6c80;">&nbsp;</h2>
+<p><strong>&nbsp;</strong></p>
